Bug 1706265 - retain ordering of transferable objects r=jonco,smaug

Differential Revision: https://phabricator.services.mozilla.com/D129568